refactor: Migrate benchmark reporting from JMH RunResult to JSON-based processing
- Refactored all report generators (BadgeGenerator, ReportGenerator, MetricsGenerator, SummaryGenerator) to use JSON files directly with Gson instead of JMH RunResult objects
- Implemented fail-fast strategy - components throw exceptions when JSON data is missing
- Fixed template placeholder syntax mismatch ( vs {{variable}})
- Extracted string constants into ReportConstants class following CUI coding standards
- Created MetricConversionUtil for consolidated unit conversion logic
- Updated all tests to use real JSON test data from resources instead of mocks
- All 85 tests passing

This change removes the dependency on JMH RunResult objects from the reporting layer, making it easier to generate reports from stored JSON results without needing the full JMH framework at runtime.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>