@@ -15,8 +15,8 @@
  */
 package de.cuioss.benchmarking.common.report;
 
+import com.google.gson.*;
 import de.cuioss.tools.logging.CuiLogger;
-import org.openjdk.jmh.results.RunResult;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -26,12 +26,12 @@ import java.nio.file.Path;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
-import java.util.Collection;
+import java.util.*;
 
 import static de.cuioss.benchmarking.common.util.BenchmarkingLogMessages.INFO;
 
 /**
- * Generates self-contained HTML reports with embedded CSS and JavaScript.
+ * Generates self-contained HTML reports with embedded CSS and JavaScript from JSON benchmark results.
  * <p>
  * This generator creates complete HTML reports that don't require external dependencies,
  * making them suitable for offline viewing and deployment to static hosting services.
@@ -46,25 +46,29 @@ import static de.cuioss.benchmarking.common.util.BenchmarkingLogMessages.INFO;
  */
 public class ReportGenerator {
 
-    private static final CuiLogger LOGGER =
-            new CuiLogger(ReportGenerator.class);
+    private static final CuiLogger LOGGER = new CuiLogger(ReportGenerator.class);
     private static final DateTimeFormatter DISPLAY_FORMATTER =
             DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss 'UTC'");
+    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
 
     /**
      * Generates the main index page with performance overview.
      *
-     * @param results the benchmark results
+     * @param jsonFile the path to the benchmark JSON results file
      * @param outputDir the output directory for HTML files
-     * @throws IOException if writing HTML files fails
+     * @throws IOException if reading JSON or writing HTML files fails
      */
-    public void generateIndexPage(Collection<RunResult> results, String outputDir) throws IOException {
-        LOGGER.info(INFO.GENERATING_INDEX_PAGE.format(results.size()));
+    public void generateIndexPage(Path jsonFile, String outputDir) throws IOException {
+        // Parse JSON file
+        String jsonContent = Files.readString(jsonFile);
+        JsonArray benchmarks = GSON.fromJson(jsonContent, JsonArray.class);
+        
+        LOGGER.info(INFO.GENERATING_INDEX_PAGE.format(benchmarks.size()));
 
         String html = generateHtmlHeader("CUI Benchmarking Results", true) +
                 generateNavigationMenu() +
-                generateOverviewSection(results) +
-                generateBenchmarkTable(results) +
+                generateOverviewSection(benchmarks) +
+                generateBenchmarkTable(benchmarks) +
                 generateHtmlFooter();
 
         Path outputPath = Path.of(outputDir);
@@ -77,16 +81,20 @@ public class ReportGenerator {
     /**
      * Generates the trends page with historical performance analysis.
      *
-     * @param results the benchmark results
+     * @param jsonFile the path to the benchmark JSON results file
      * @param outputDir the output directory for HTML files
-     * @throws IOException if writing HTML files fails
+     * @throws IOException if reading JSON or writing HTML files fails
      */
-    public void generateTrendsPage(Collection<RunResult> results, String outputDir) throws IOException {
+    public void generateTrendsPage(Path jsonFile, String outputDir) throws IOException {
+        // Parse JSON file
+        String jsonContent = Files.readString(jsonFile);
+        JsonArray benchmarks = GSON.fromJson(jsonContent, JsonArray.class);
+        
         LOGGER.info(INFO.GENERATING_TRENDS_PAGE::format);
 
         String html = generateHtmlHeader("Performance Trends", true) +
                 generateNavigationMenu() +
-                generateTrendsSection(results) +
+                generateTrendsSection(benchmarks) +
                 generateHtmlFooter();
 
         Path outputPath = Path.of(outputDir);
@@ -99,224 +107,311 @@ public class ReportGenerator {
     /**
      * Generates the detailed visualizer page with JMH Visualizer integration.
      *
-     * @param results the benchmark results
-     * @param benchmarkType the type of benchmarks (micro or integration)
+     * @param jsonFile the path to the benchmark JSON results file
+     * @param benchmarkType the display name for the benchmark type
      * @param outputDir the output directory for HTML files
-     * @throws IOException if writing HTML files fails
+     * @throws IOException if reading JSON or writing HTML files fails
      */
-    public void generateDetailedPage(Collection<RunResult> results, String benchmarkType, String outputDir) throws IOException {
-        LOGGER.info("Generating detailed visualizer page...");
+    public void generateDetailedPage(Path jsonFile, String benchmarkType, String outputDir) throws IOException {
+        // Parse JSON file  
+        String jsonContent = Files.readString(jsonFile);
+        JsonArray benchmarks = GSON.fromJson(jsonContent, JsonArray.class);
+        
+        LOGGER.info(INFO.GENERATING_REPORTS::format);
 
-        String html = generateHtmlHeader("Detailed Analysis", false) +
+        String html = generateHtmlHeader("Detailed Benchmark Analysis", true) +
                 generateNavigationMenu() +
-                generateDetailedSection(results, benchmarkType) +
+                generateDetailedSection(benchmarks, benchmarkType) +
                 generateHtmlFooter();
 
         Path outputPath = Path.of(outputDir);
         Files.createDirectories(outputPath);
         Path detailedFile = outputPath.resolve("detailed.html");
         Files.writeString(detailedFile, html);
-        LOGGER.info("Detailed page generated at: " + detailedFile);
+        LOGGER.info(INFO.INDEX_PAGE_GENERATED.format(detailedFile));
     }
 
-    private String generateHtmlHeader(String title, boolean includeCharts) throws IOException {
+    private String generateHtmlHeader(String title, boolean includeChartJs) throws IOException {
         String template = loadTemplate("report-header.html");
-        String chartScript = includeCharts ? "<script src=\"https://cdn.jsdelivr.net/npm/chart.js\"></script>" : "";
-        return template
-                .replace("${title}", title)
-                .replace("${css}", getEmbeddedCSS())
-                .replace("${chartScript}", chartScript);
-    }
-
-    private String generateHtmlFooter() throws IOException {
-        String template = loadTemplate("report-footer.html");
-        return template.replace("${timestamp}", getCurrentTimestamp());
+        template = template.replace("${title}", title);
+        template = template.replace("${css}", loadTemplate("report-styles.css"));
+        
+        if (includeChartJs) {
+            template = template.replace("${chartScript}", 
+                "<script src=\"https://cdn.jsdelivr.net/npm/chart.js\"></script>");
+        } else {
+            template = template.replace("${chartScript}", "");
+        }
+        
+        return template;
     }
 
     private String generateNavigationMenu() throws IOException {
         return loadTemplate("navigation-menu.html");
     }
 
-    private String generateOverviewSection(Collection<RunResult> results) throws IOException {
+    private String generateOverviewSection(JsonArray benchmarks) throws IOException {
         String template = loadTemplate("overview-section.html");
-        double avgThroughput = calculateAverageThroughput(results);
-        double avgLatency = calculateAverageLatency(results);
-        return template
-                .replace("${totalBenchmarks}", String.valueOf(results.size()))
-                .replace("${avgThroughput}", formatThroughput(avgThroughput))
-                .replace("${avgLatency}", formatLatency(avgLatency))
-                .replace("${performanceGrade}", calculatePerformanceGrade(avgThroughput));
+        
+        // Calculate metrics from JSON
+        int totalBenchmarks = benchmarks.size();
+        double avgThroughput = calculateAverageThroughput(benchmarks);
+        double avgLatency = calculateAverageLatency(benchmarks);
+        String grade = calculatePerformanceGrade(avgThroughput, avgLatency);
+        
+        template = template.replace("${totalBenchmarks}", String.valueOf(totalBenchmarks));
+        template = template.replace("${performanceGrade}", grade);
+        template = template.replace("${avgThroughput}", formatThroughput(avgThroughput));
+        template = template.replace("${avgLatency}", formatLatency(avgLatency));
+        template = template.replace("${timestamp}", 
+            DISPLAY_FORMATTER.format(Instant.now().atOffset(ZoneOffset.UTC)));
+        
+        return template;
     }
 
-    private String generateBenchmarkTable(Collection<RunResult> results) throws IOException {
+    private String generateBenchmarkTable(JsonArray benchmarks) throws IOException {
         String template = loadTemplate("benchmark-table.html");
         StringBuilder rows = new StringBuilder();
-        for (RunResult result : results) {
-            rows.append(generateBenchmarkRow(result));
+        
+        for (JsonElement element : benchmarks) {
+            JsonObject benchmark = element.getAsJsonObject();
+            rows.append(generateBenchmarkRow(benchmark));
         }
+        
         return template.replace("${tableRows}", rows.toString());
     }
 
-    private String generateBenchmarkRow(RunResult result) {
-        try {
-            String template = loadTemplate("benchmark-row.html");
-            String benchmarkName = extractBenchmarkName(result.getParams().getBenchmark());
-
-            if (result.getPrimaryResult() != null) {
-                var primaryResult = result.getPrimaryResult();
-                String score = "%.2f".formatted(primaryResult.getScore());
-                String unit = primaryResult.getScoreUnit();
-                String error = "N/A";
-                String samples = "N/A";
-
-                if (primaryResult.getStatistics() != null) {
-                    error = "±%.2f".formatted(primaryResult.getStatistics().getStandardDeviation());
-                    samples = String.valueOf(primaryResult.getStatistics().getN());
-                }
-
-                return template
-                        .replace("${benchmarkName}", benchmarkName)
-                        .replace("${score}", score)
-                        .replace("${unit}", unit)
-                        .replace("${error}", error)
-                        .replace("${samples}", samples);
-            } else {
-                return template
-                        .replace("${benchmarkName}", benchmarkName)
-                        .replace("${score}", "No data")
-                        .replace("${unit}", "")
-                        .replace("${error}", "")
-                        .replace("${samples}", "");
-            }
-        } catch (IOException e) {
-            LOGGER.warn("Failed to load benchmark row template, using fallback", e);
-            return "<tr><td>" + extractBenchmarkName(result.getParams().getBenchmark()) + "</td><td colspan='4'>Error</td></tr>";
-        }
+    private String generateBenchmarkRow(JsonObject benchmark) {
+        String name = benchmark.get("benchmark").getAsString();
+        String mode = benchmark.get("mode").getAsString();
+        
+        JsonObject primaryMetric = benchmark.getAsJsonObject("primaryMetric");
+        double score = primaryMetric.get("score").getAsDouble();
+        String unit = primaryMetric.get("scoreUnit").getAsString();
+        
+        // Extract just the method name from full benchmark name
+        String displayName = name.substring(name.lastIndexOf('.') + 1);
+        
+        return String.format(
+            "<tr>" +
+            "<td>%s</td>" +
+            "<td>%s</td>" +
+            "<td>%.2f</td>" +
+            "<td>%s</td>" +
+            "</tr>\n",
+            displayName, mode, score, unit
+        );
     }
 
-    private String generateTrendsSection(Collection<RunResult> results) throws IOException {
+    private String generateTrendsSection(JsonArray benchmarks) throws IOException {
         String template = loadTemplate("trends-section.html");
-        return template
-                .replace("${benchmarkCount}", String.valueOf(results.size()))
-                .replace("${performanceGrade}", calculatePerformanceGrade(calculateAverageThroughput(results)));
+        
+        // For now, show current data as a starting point
+        // In production, this would load historical data
+        String chartData = generateChartData(benchmarks);
+        
+        // Calculate performance metrics
+        double avgThroughput = calculateAverageThroughput(benchmarks);
+        String grade = calculatePerformanceGrade(avgThroughput, 0);
+        
+        template = template.replace("${benchmarkCount}", String.valueOf(benchmarks.size()));
+        template = template.replace("${performanceGrade}", grade);
+        template = template.replace("${chartData}", chartData);
+        template = template.replace("${trendsTable}", generateTrendsTable(benchmarks));
+        
+        return template;
     }
-    
-    private String generateDetailedSection(Collection<RunResult> results, String benchmarkType) throws IOException {
+
+    private String generateDetailedSection(JsonArray benchmarks, String benchmarkType) throws IOException {
         String template = loadTemplate("detailed-section.html");
-        return template
-                .replace("${benchmarkType}", benchmarkType)
-                .replace("${totalBenchmarks}", String.valueOf(results.size()));
+        
+        template = template.replace("${benchmarkType}", benchmarkType);
+        template = template.replace("${totalBenchmarks}", String.valueOf(benchmarks.size()));
+        
+        return template;
     }
-    
-    private double calculateAverageLatency(Collection<RunResult> results) {
-        return results.stream()
-                .filter(r -> r.getPrimaryResult() != null)
-                .filter(r -> r.getPrimaryResult().getScoreUnit().contains("/op"))
-                .mapToDouble(r -> {
-                    String unit = r.getPrimaryResult().getScoreUnit();
-                    double score = r.getPrimaryResult().getScore();
-                    // Convert to milliseconds
-                    if (unit.contains("ns/op")) {
-                        return score / 1_000_000.0; // ns to ms
-                    } else if (unit.contains("us/op")) {
-                        return score / 1_000.0; // us to ms  
-                    } else if (unit.contains("s/op")) {
-                        return score * 1_000.0; // s to ms
-                    }
-                    return score; // assume ms/op
+
+    private String generateChartData(JsonArray benchmarks) {
+        List<String> labels = new ArrayList<>();
+        List<Double> throughputData = new ArrayList<>();
+        List<Double> latencyData = new ArrayList<>();
+        
+        for (JsonElement element : benchmarks) {
+            JsonObject benchmark = element.getAsJsonObject();
+            String name = benchmark.get("benchmark").getAsString();
+            String mode = benchmark.get("mode").getAsString();
+            
+            // Extract method name
+            String label = name.substring(name.lastIndexOf('.') + 1);
+            
+            JsonObject primaryMetric = benchmark.getAsJsonObject("primaryMetric");
+            double score = primaryMetric.get("score").getAsDouble();
+            String unit = primaryMetric.get("scoreUnit").getAsString();
+            
+            if ("thrpt".equals(mode) || unit.contains("ops")) {
+                labels.add(label);
+                double opsPerSec = convertToOpsPerSecond(score, unit);
+                throughputData.add(opsPerSec);
+                latencyData.add(0.0); // No latency for throughput benchmarks
+            } else if (unit.contains("/op")) {
+                if (!labels.contains(label)) {
+                    labels.add(label);
+                    throughputData.add(0.0); // No throughput for latency benchmarks
+                }
+                double ms = convertToMilliseconds(score, unit);
+                int index = labels.indexOf(label);
+                if (index >= 0 && index < latencyData.size()) {
+                    latencyData.set(index, ms);
+                } else {
+                    latencyData.add(ms);
+                }
+            }
+        }
+        
+        return String.format(
+            "{\n" +
+            "  labels: %s,\n" +
+            "  throughput: %s,\n" +
+            "  latency: %s\n" +
+            "}",
+            GSON.toJson(labels),
+            GSON.toJson(throughputData),
+            GSON.toJson(latencyData)
+        );
+    }
+
+    private String generateTrendsTable(JsonArray benchmarks) {
+        StringBuilder table = new StringBuilder();
+        table.append("<table class=\"table\">\n");
+        table.append("<thead><tr><th>Benchmark</th><th>Current</th><th>Previous</th><th>Change</th></tr></thead>\n");
+        table.append("<tbody>\n");
+        
+        for (JsonElement element : benchmarks) {
+            JsonObject benchmark = element.getAsJsonObject();
+            String name = benchmark.get("benchmark").getAsString();
+            String displayName = name.substring(name.lastIndexOf('.') + 1);
+            
+            JsonObject primaryMetric = benchmark.getAsJsonObject("primaryMetric");
+            double score = primaryMetric.get("score").getAsDouble();
+            String unit = primaryMetric.get("scoreUnit").getAsString();
+            
+            table.append("<tr>");
+            table.append("<td>").append(displayName).append("</td>");
+            table.append("<td>").append(String.format("%.2f %s", score, unit)).append("</td>");
+            table.append("<td>N/A</td>"); // No historical data yet
+            table.append("<td>-</td>");
+            table.append("</tr>\n");
+        }
+        
+        table.append("</tbody></table>");
+        return table.toString();
+    }
+
+    private double calculateAverageThroughput(JsonArray benchmarks) {
+        return benchmarks.asList().stream()
+                .map(JsonElement::getAsJsonObject)
+                .filter(b -> {
+                    String mode = b.get("mode").getAsString();
+                    String unit = b.getAsJsonObject("primaryMetric").get("scoreUnit").getAsString();
+                    return "thrpt".equals(mode) || unit.contains("ops");
+                })
+                .mapToDouble(b -> {
+                    JsonObject metric = b.getAsJsonObject("primaryMetric");
+                    double score = metric.get("score").getAsDouble();
+                    String unit = metric.get("scoreUnit").getAsString();
+                    return convertToOpsPerSecond(score, unit);
                 })
                 .average()
                 .orElse(0.0);
     }
-    
-    private String formatLatency(double latencyMs) {
-        if (latencyMs == 0) {
-            return "N/A";
-        } else if (latencyMs < 1.0) {
-            return "%.2f ms".formatted(latencyMs);
-        } else if (latencyMs < 1000) {
-            return "%.1f ms".formatted(latencyMs);
-        } else {
-            return "%.1f s".formatted(latencyMs / 1000);
-        }
-    }
 
-    private String getEmbeddedCSS() {
-        try {
-            return loadTemplate("report-styles.css");
-        } catch (IOException e) {
-            LOGGER.warn("Failed to load CSS template, using fallback", e);
-            return "/* CSS loading failed */";
-        }
-    }
-
-    private String extractBenchmarkName(String fullName) {
-        if (fullName == null) return "Unknown";
-        String[] parts = fullName.split("\\.");
-        return parts.length > 0 ? parts[parts.length - 1] : fullName;
-    }
-
-    private double calculateAverageThroughput(Collection<RunResult> results) {
-        return results.stream()
-                .filter(r -> r.getPrimaryResult() != null)
-                .filter(r -> r.getPrimaryResult().getScoreUnit().contains("ops"))
-                .mapToDouble(r -> {
-                    String unit = r.getPrimaryResult().getScoreUnit();
-                    double score = r.getPrimaryResult().getScore();
-                    // Convert ops/ms to ops/s
-                    if (unit.contains("ops/ms")) {
-                        return score * 1000;
-                    }
-                    return score;
+    private double calculateAverageLatency(JsonArray benchmarks) {
+        return benchmarks.asList().stream()
+                .map(JsonElement::getAsJsonObject)
+                .filter(b -> {
+                    String unit = b.getAsJsonObject("primaryMetric").get("scoreUnit").getAsString();
+                    return unit.contains("/op");
+                })
+                .mapToDouble(b -> {
+                    JsonObject metric = b.getAsJsonObject("primaryMetric");
+                    double score = metric.get("score").getAsDouble();
+                    String unit = metric.get("scoreUnit").getAsString();
+                    return convertToMilliseconds(score, unit);
                 })
                 .average()
                 .orElse(0.0);
+    }
+
+    private double convertToOpsPerSecond(double value, String unit) {
+        if (unit.contains("ops/s")) {
+            return value;
+        } else if (unit.contains("ops/ms")) {
+            return value * 1000;
+        } else if (unit.contains("ops/us")) {
+            return value * 1_000_000;
+        } else if (unit.contains("ops/ns")) {
+            return value * 1_000_000_000;
+        }
+        return value;
+    }
+
+    private double convertToMilliseconds(double value, String unit) {
+        if (unit.contains("ms/op")) {
+            return value;
+        } else if (unit.contains("s/op")) {
+            return value * 1000;
+        } else if (unit.contains("us/op")) {
+            return value / 1000;
+        } else if (unit.contains("ns/op")) {
+            return value / 1_000_000;
+        }
+        return value;
+    }
+
+    private String calculatePerformanceGrade(double throughput, double latency) {
+        // Simple grading based on throughput (ops/s) and latency (ms)
+        double score = (throughput / 1000) * (latency > 0 ? 100 / latency : 100);
+        
+        if (score >= 1000) return "A+";
+        if (score >= 500) return "A";
+        if (score >= 200) return "B";
+        if (score >= 100) return "C";
+        if (score >= 50) return "D";
+        return "F";
+    }
+
+    private String getGradeClass(String grade) {
+        return "grade-" + grade.toLowerCase().replace("+", "-plus");
     }
 
     private String formatThroughput(double throughput) {
+        if (throughput == 0) return "N/A";
         if (throughput >= 1_000_000) {
-            return "%.1fM ops/s".formatted(throughput / 1_000_000);
-        } else if (throughput >= 1_000) {
-            return "%.1fK ops/s".formatted(throughput / 1_000);
+            return String.format("%.1fM ops/s", throughput / 1_000_000);
+        } else if (throughput >= 1000) {
+            return String.format("%.1fK ops/s", throughput / 1000);
+        }
+        return String.format("%.1f ops/s", throughput);
+    }
+
+    private String formatLatency(double latency) {
+        if (latency == 0) return "N/A";
+        if (latency >= 1000) {
+            return String.format("%.1f s", latency / 1000);
+        } else if (latency >= 1) {
+            return String.format("%.1f ms", latency);
         } else {
-            return "%.0f ops/s".formatted(throughput);
+            return String.format("%.2f ms", latency);
         }
     }
 
-    private String calculatePerformanceGrade(double throughput) {
-        String grade = switch ((int) Math.log10(Math.max(1, throughput))) {
-            case 6, 7, 8, 9 -> "A+";
-            case 5 -> "A";
-            case 4 -> "B";
-            case 3 -> "C";
-            case 2 -> "D";
-            default -> "F";
-        };
-
-        // Apply CSS class based on grade
-        String cssClass = switch (grade) {
-            case "A+" -> "grade-a-plus";
-            case "A" -> "grade-a";
-            case "B" -> "grade-b";
-            case "C" -> "grade-c";
-            case "D" -> "grade-d";
-            default -> "grade-f";
-        };
-
-        return "<span class=\"" + cssClass + "\">" + grade + "</span>";
+    private String generateHtmlFooter() throws IOException {
+        String template = loadTemplate("report-footer.html");
+        template = template.replace("${timestamp}", 
+            DISPLAY_FORMATTER.format(Instant.now().atOffset(ZoneOffset.UTC)));
+        return template;
     }
 
-    private String getCurrentTimestamp() {
-        return DISPLAY_FORMATTER.format(Instant.now().atOffset(ZoneOffset.UTC));
-    }
-
-    /**
-     * Loads a template from the classpath resources.
-     *
-     * @param templateName the name of the template file
-     * @return the template content as a string
-     * @throws IOException if the template cannot be loaded
-     */
     private String loadTemplate(String templateName) throws IOException {
         String resourcePath = "/templates/" + templateName;
         try (InputStream is = getClass().getResourceAsStream(resourcePath)) {
